force-app/main/default/objects/Activity/fields/Event_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Event_Subtype__c</fullName>
    <label>Event Subtype</label>
    <length>50</length>
    <type>Text</type>
</CustomField>