force-app/main/default/objects/Activity/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>TR1__Job__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>