force-app/main/default/objects/Activity/fields/TR1__Activity_Config__c.field-meta.xml
<CustomField>
    <fullName>TR1__Activity_Config__c</fullName>
    <label>Activity Config</label>
    <length>255</length>
    <type>Text</type>
</CustomField>