force-app/main/default/objects/Activity/fields/TR1__Application_V2__c.field-meta.xml
<CustomField>
    <fullName>TR1__Application_V2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application V2</label>
    <referenceTo>TR1__Application_V2__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>