force-app/main/default/objects/Activity/fields/TR1__AttachmentNames__c.field-meta.xml
<CustomField>
    <fullName>TR1__AttachmentNames__c</fullName>
    <label>Attachment Names</label>
    <type>TextArea</type>
</CustomField>