force-app/main/default/objects/Activity/fields/TR1__Attendees__c.field-meta.xml
<CustomField>
    <fullName>TR1__Attendees__c</fullName>
    <description>Field to store attendees Ids for EventRelation object</description>
    <inlineHelpText>The Ids of the users who will be listed as event attendees.</inlineHelpText>
    <label>Attendees</label>
    <type>TextArea</type>
</CustomField>