force-app/main/default/objects/Activity/fields/TR1__Brief_Summary__c.field-meta.xml
<CustomField>
    <fullName>TR1__Brief_Summary__c</fullName>
    <label>Brief Summary</label>
    <type>TextArea</type>
</CustomField>