force-app/main/default/objects/Activity/fields/TR1__Call_Type__c.field-meta.xml
<CustomField>
    <fullName>TR1__Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recruiting Call</fullName>
            </value>
            <value>
                <fullName>Business Development Call</fullName>
            </value>
            <value>
                <fullName>Other Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>