force-app/main/default/objects/Activity/fields/TR1__Contact_Document_Ids_2__c.field-meta.xml
<CustomField>
    <fullName>TR1__Contact_Document_Ids_2__c</fullName>
    <label>Shared Resumes 2</label>
    <type>TextArea</type>
</CustomField>