force-app/main/default/objects/Activity/fields/TR1__Date_To_Sort_By__c.field-meta.xml
<CustomField>
    <fullName>TR1__Date_To_Sort_By__c</fullName>
    <description>Formula to calculate Date/Time value used to sort Activities in the Combined View for Power Note List component.</description>
    <formula>IF(
NOT(ISNULL(ActivityDateTime)),
ActivityDateTime,
(IF(NOT(ISNULL(ActivityDate)), DATETIMEVALUE(ActivityDate), CreatedDate))
)</formula>
    <inlineHelpText>Formula to calculate Date/Time value used to sort Activities in the Combined View for Power Note List component.</inlineHelpText>
    <label>Date To Sort By</label>
    <type>DateTime</type>
</CustomField>