force-app/main/default/objects/Activity/fields/TR1__Is_Billing_Event__c.field-meta.xml
<CustomField>
    <fullName>TR1__Is_Billing_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this task is marked as a Billing Event.</description>
    <inlineHelpText>If checked, this task is marked as a Billing Event.</inlineHelpText>
    <label>Billing Event</label>
    <type>Checkbox</type>
</CustomField>