force-app/main/default/objects/Activity/fields/TR1__Location__c.field-meta.xml
<CustomField>
    <fullName>TR1__Location__c</fullName>
    <description>The location from which the Power Note is created.</description>
    <inlineHelpText>The location from which the Power Note is created.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>