force-app/main/default/objects/Activity/fields/TR1__Original_Power_Note__c.field-meta.xml
<CustomField>
    <fullName>TR1__Original_Power_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if a record is an original note</description>
    <inlineHelpText>Checked if a record is an original note</inlineHelpText>
    <label>Original Power Note</label>
    <type>Checkbox</type>
</CustomField>