force-app/main/default/objects/Activity/fields/TR1__Power_Share__c.field-meta.xml
<CustomField>
    <fullName>TR1__Power_Share__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked to Power Share</description>
    <inlineHelpText>Lookup to Power Share</inlineHelpText>
    <label>Power Share</label>
    <referenceTo>TR1__Power_Share__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>