force-app/main/default/objects/Activity/fields/TR1__Power_Share_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>TR1__Power_Share_Source_Name__c</fullName>
    <description>This field is used in the fieldset TR1__Power_Notes_Tableview as a cue to allow the PowerNotes table view component to show the source if the field is in the displayed fields section.</description>
    <formula>TR1__Power_Share__r.TR1__Source__r.FirstName+&apos; &apos;+TR1__Power_Share__r.TR1__Source__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used in the fieldset TR1__Power_Notes_Tableview as a cue to allow the PowerNotes table view component to show the source if the field is in the displayed fields section.</inlineHelpText>
    <label>Source</label>
    <type>Text</type>
</CustomField>