force-app/main/default/objects/Activity/fields/TR1__Related_Records__c.field-meta.xml
<CustomField>
    <fullName>TR1__Related_Records__c</fullName>
    <description>This field is used in the fieldset TR1__Power_Notes_Tableview as a cue to allow the PowerNotes table view component to show the related records if the field is in the displayed fields section.</description>
    <inlineHelpText>This field is used in the fieldset TR1__Power_Notes_Tableview as a cue to allow the PowerNotes table view component to show the related records if the field is in the displayed fields section.</inlineHelpText>
    <label>Related To</label>
    <length>16</length>
    <type>Text</type>
</CustomField>