force-app/main/default/objects/Activity/fields/TR1__Result_of_Call__c.field-meta.xml
<CustomField>
    <fullName>TR1__Result_of_Call__c</fullName>
    <label>Result of Call</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Wrong/Disconnect Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>