force-app/main/default/objects/Activity/fields/TR1__Send_Out_Schedule__c.field-meta.xml
<CustomField>
    <fullName>TR1__Send_Out_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Send Out Schedule</label>
    <referenceTo>TR1__Send_Out_Schedule__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>