force-app/main/default/objects/Activity/fields/TR1__Send_Out_Schedule_V2__c.field-meta.xml
<CustomField>
    <fullName>TR1__Send_Out_Schedule_V2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Send Out Schedule V2</label>
    <referenceTo>TR1__Send_Out_Schedule_V2__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>SOSActivities</relationshipName>
    <type>Lookup</type>
</CustomField>