force-app/main/default/objects/Activity/fields/TR1__Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>TR1__Unique_Identifier__c</fullName>
    <description>If applicable, stores a unique identifier that is used instead of the Template Id.</description>
    <inlineHelpText>If applicable, stores a unique identifier that is used instead of the Template Id.</inlineHelpText>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>